# parcel

./: .babelrc  .editorconfig  .eslintignore  .eslintrc.json  .flowconfig  .gitattributes  .gitignore  .mocharc-integration.json  .mocharc.json  .npmignore  .prettierignore  .prettierrc  .proxyrc.js  .travis.yml  .yarnrc.yml  0001-Disable-scope-hoisting-when-this-points-to-an-export.patch  CHANGELOG.md  CODE_OF_CONDUCT.md  CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTES.md  OLD_LICENSE  PARCEL_2_RFC.md  README.md  appveyor-runner.yml  appveyor.yml  azure-pipelines-template.yml  azure-pipelines.yml  babel.config.js  bitbucket-pipelines.yml  changelog.md  flow-resolver.js  foo.txt  gulpfile.js  index.js  integration.mocharc.json  isbl.js  lerna.json  (+21 more)
crates/atlaspack/: Cargo.toml
crates/atlaspack/src/: atlaspack.rs  lib.rs  plugins.rs  project_root.rs  test_utils.rs
crates/atlaspack/src/plugins/: config_plugins.rs
crates/atlaspack/src/request_tracker/: request.rs  request_tracker.rs
crates/atlaspack/src/requests/: asset_graph_request.rs  asset_request.rs  entry_request.rs  path_request.rs  target_request.rs
crates/atlaspack_config/: Cargo.toml
crates/atlaspack_config/src/: atlaspack_config.rs  atlaspack_config_fixtures.rs  atlaspack_rc.rs  atlaspack_rc_config_loader.rs  lib.rs  partial_atlaspack_config.rs
crates/atlaspack_config/src/map/: matcher.rs  named_pipelines_map.rs  pipeline_map.rs  pipelines_map.rs
crates/atlaspack_core/: Cargo.toml
crates/atlaspack_core/src/: config_loader.rs  hash.rs  plugin.rs  types.rs
crates/atlaspack_core/src/plugin/: bundler_plugin.rs  compressor_plugin.rs  reporter_plugin.rs  resolver_plugin.rs  transformer_plugin.rs  validator_plugin.rs
crates/atlaspack_core/src/types/: asset.rs  atlaspack_options.rs  bundle.rs  dependency.rs  diagnostic.rs  environment.rs  file.rs  invalidation.rs  json.rs  symbol.rs  target.rs
crates/atlaspack_filesystem/: Cargo.toml
crates/atlaspack_filesystem/src/: in_memory_file_system.rs  os_file_system.rs  search.rs
crates/atlaspack_package_manager/: Cargo.toml
crates/atlaspack_package_manager/src/: node_package_manager.rs
crates/atlaspack_plugin_resolver/: Cargo.toml
crates/atlaspack_plugin_resolver/src/: atlaspack_resolver.rs  lib.rs
crates/atlaspack_plugin_rpc/: Cargo.toml
crates/atlaspack_plugin_rpc/src/nodejs/: mod.rs  rpc_conn_nodejs.rs  rpc_host_nodejs.rs
crates/atlaspack_plugin_rpc/src/plugin/: bundler.rs  compressor.rs  mod.rs  namer.rs  optimizer.rs  packager.rs  reporter.rs  resolver.rs  (+2 more)
crates/atlaspack_plugin_transformer_js/: Cargo.toml
crates/atlaspack_plugin_transformer_js/src/: lib.rs  transformer.rs  ts_config.rs
crates/core/: Cargo.toml
crates/core/src/: asset_graph.rs  cache.rs  diagnostic.rs  environment.rs  intern.rs  lib.rs  main.rs  parcel_config.rs  request_tracker.rs  types.rs  worker_farm.rs
crates/db/: Cargo.toml
crates/db/src/: alloc.rs  arena.rs  atomics.rs  codegen.rs  lib.rs  main.rs  page_allocator.rs  slab.rs  slabs.rs  string.rs  vec.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/json-comments-rs/: Cargo.toml  README.md
crates/json-comments-rs/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  napi.rs
crates/node-bindings/: Cargo.toml  asset_graph.dot  build.rs
crates/node-bindings/src/: core.rs  core_next.rs  db.rs  encoder.rs  fs_search.rs  hash.rs  image.rs  init_sentry.rs  inline_requires.rs  lib.rs  resolver.rs  resolver_old.rs  transformer.rs  utils.rs  yarn_watcher.rs
crates/parcel/: Cargo.toml
crates/parcel/benches/: parcel_benchmarks.rs
crates/parcel/src/: adapter.rs  asset_graph.rs  cache.rs  lib.rs  napi.rs  parcel.rs  plugins.rs  project_root.rs  requests.rs  test_utils.rs
crates/parcel_config/: Cargo.toml
crates/parcel_config/src/: config_error.rs  lib.rs  map.rs  parcel_config.rs  parcel_config_fixtures.rs  parcel_rc.rs  parcel_rc_config_loader.rs  partial_parcel_config.rs  pipeline.rs
crates/parcel_core/: Cargo.toml  bench.rs
crates/parcel_core/src/: asset_graph.rs  bundle_graph.rs  cache.rs  config_loader.rs  hash.rs  lib.rs  plugin.rs  project_path.rs  types.rs
crates/parcel_crypto/: Cargo.toml
crates/parcel_crypto/src/: hash.rs  hash_napi.rs  lib.rs
crates/parcel_filesystem/: Cargo.toml
crates/parcel_filesystem/src/: in_memory_file_system.rs  js_delegate_file_system.rs  lib.rs  os_file_system.rs  search.rs  tracking_file_system.rs
crates/parcel_monitoring/: Cargo.toml  README.md
crates/parcel_monitoring/examples/: sample_usage.rs
crates/parcel_monitoring/src/: crash_reporter.rs  lib.rs  sentry_integration.rs  tracer.rs
crates/parcel_napi_helpers/: Cargo.toml
crates/parcel_napi_helpers/src/: anyhow.rs  call_method.rs  lib.rs  transferable.rs
crates/parcel_nodejs/: Cargo.toml
crates/parcel_nodejs/.cargo/: config.toml
crates/parcel_nodejs/src/: file_system.rs  lib.rs
crates/parcel_package_manager/: Cargo.toml
crates/parcel_package_manager/src/: js_package_manager.rs  lib.rs  node_package_manager.rs  package_manager.rs
crates/parcel_plugin_resolver/: Cargo.toml
crates/parcel_plugin_resolver/src/: lib.rs  parcel_resolver.rs  resolver.rs
crates/parcel_plugin_resolver/test/: .gitignore  tsconfig.json
crates/parcel_plugin_rpc/: Cargo.toml
crates/parcel_plugin_rpc/src/: lib.rs  rpc_conn_message.rs  rpc_host.rs  rpc_host_message.rs  rpc_host_response.rs
crates/parcel_plugin_transformer_js/: Cargo.toml
crates/parcel_plugin_transformer_js/src/: lib.rs  transformer.rs
crates/parcel_wasm/: Cargo.toml
crates/parcel_wasm/src/: file_system.rs  function_ref.rs  lib.rs  resolver.rs  transformer.rs
native-packages/fs-search/: .gitignore  Cargo.toml  index.js  package.json
native-packages/fs-search/.cargo/: config.toml
native-packages/fs-search/src/: lib.rs
native-packages/js-swc/: Cargo.toml  hoist.md  package.json
native-packages/js-swc/src/: SWCTransformer.js  decl_collector.rs  dependency_collector.rs  env_replacer.rs  fast_refresh.rs  fs.rs  global_replacer.rs  hoist.rs  lib.rs  modules.rs  native.js  utils.rs
(+1392 files in other folders)
