[workspace]
members = [
  "crates/*",
  "packages/transformers/js/core",
  "packages/transformers/js/napi",
  "packages/transformers/js/wasm",
  "packages/utils/fs-search",
  "packages/utils/hash",
  "packages/optimizers/image",
  "packages/utils/node-resolver-rs",
  "packages/utils/node-resolver-core",
  "packages/utils/dev-dep-resolver"
]
