[workspace]
members = [
  "crates/*",
  "packages/transformers/js/core",
  "packages/transformers/js/napi",
  "packages/transformers/js/wasm",
  "packages/utils/fs-search",
  "packages/utils/hash",
  "packages/optimizers/image",
  "packages/utils/node-resolver-rs",
  "packages/utils/node-resolver-core",
  "packages/utils/dev-dep-resolver"
]

[patch.crates-io]
chrono = { git = "https://github.com/devongovett/chrono.git", branch = "0.4.x" }
browserslist-rs = { git = "https://github.com/devongovett/browserslist-rs.git", branch = "wasm" }
