[package]
name = "atlaspack"
version = "0.1.0"
edition = "2021"
description = "Atlaspack Bundler"

[features]
nodejs = ["atlaspack_plugin_rpc/nodejs"]

[dependencies]
atlaspack_config = { path = "../atlaspack_config" }
atlaspack_core = { path = "../atlaspack_core" }
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
atlaspack_package_manager = { path = "../atlaspack_package_manager" }
atlaspack_plugin_resolver = { path = "../atlaspack_plugin_resolver" }
atlaspack_plugin_transformer_js = { path = "../atlaspack_plugin_transformer_js" }
atlaspack_plugin_rpc = { path = "../atlaspack_plugin_rpc" }
atlaspack-resolver = { path = "../../packages/utils/node-resolver-rs" }

anyhow = "1.0.82"
dyn-hash = "0.x"
num_cpus = "1.16.0"
pathdiff = "0.2.1"
petgraph = "0.x"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.200", features = ["derive"] }
serde-bool = "0.1.3"
serde_json = "1.0.116"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }

[dev-dependencies]
mockall = "0.12.1"
