[package]
name = "atlaspack_core"
version = "0.1.0"
edition = "2021"
description = "Core logic and types for the atlaspack bundler"

[features]
default = []

[dependencies]
atlaspack_filesystem = { path = "../atlaspack_filesystem" }

anyhow = "1.0.82"
bitflags = "2.5.0"
browserslist-rs = "0.16.0"
derive_builder = "0.20.0"
dyn-hash = "0.x"
nodejs-semver = "4.0.0"
mockall = "0.12.1"
petgraph = { version = "0.6.5", features = ["serde-1"] }
serde = { version = "1.0.200", features = ["derive", "rc"] }
serde_json = { version = "1.0.116", features = ["preserve_order"] }
serde_repr = "0.1.19"
serde-value = "0.7.0"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
