[package]
authors = ["Monica Olejniczak <monica.j.olejniczak@gmail.com>"]
name = "atlaspack_package_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
mockall = "0.12.1"
atlaspack-resolver = { path = "../../packages/utils/node-resolver-rs" }
atlaspack_filesystem = { path = "../atlaspack_filesystem" }
serde = { version = "1.0.200", features = ["derive"] }
