[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "parcel-db"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
aligned = "0.4.1"
convert_case = "0.6.0"
bitflags = "*"
ctor = "*"
paste = "1.0.12"
parcel-derive = { path = "../derive" }
allocator-api2 = { version = "*", features = ["serde"] }
dashmap = { version = "5.5.3", features = ["raw-api"] }
derivative = "2.2.0"
thread_local = "1.1.7"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
serde = { version = "1.0.123", features = ["derive"] }
