[package]
name = "json_comments"
version = "0.2.1"
authors = ["Thayne McCombs <astrothayne@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/tmccombs/json-comments-rs"
description = "Library to strip comments from JSON before parsing"

[badges]
travis-ci = { repository = "tmccombs/json-comments-rs" }

[dev-dependencies]
serde_json = "1.0"
