[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "atlaspack-node-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
canary = ["atlaspack_monitoring/canary"]

[dependencies]
atlaspack = { path = "../atlaspack" }
atlaspack_core = { path = "../atlaspack_core" }
atlaspack-js-swc-core = { path = "../../packages/transformers/js/core" }
atlaspack_monitoring = { path = "../atlaspack_monitoring" }
atlaspack-resolver = { path = "../../packages/utils/node-resolver-rs" }
atlaspack-resolver-old = { path = "../../packages/utils/node-resolver-rs-old" }
atlaspack_package_manager = { path = "../atlaspack_package_manager" }
atlaspack_plugin_transformer_js = { path = "../atlaspack_plugin_transformer_js" }
atlaspack_napi_helpers = { path = "../atlaspack_napi_helpers" }

anyhow = "1.0.82"
dashmap = "5.4.0"
glob = "0.3.1"
log = "0.4.21"
mockall = "0.12.1"
napi-derive = "2.16.3"
num_cpus = "1.16.0"
parking_lot = "0.12"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
toml = "0.8.12"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
atlaspack = { path = "../atlaspack", features = ["nodejs"] }
atlaspack-dev-dep-resolver = { path = "../../packages/utils/dev-dep-resolver" }
atlaspack-dev-dep-resolver-old = { path = "../../packages/utils/dev-dep-resolver-old" }
atlaspack-macros = { path = "../macros", features = ["napi"] }

crossbeam-channel = "0.5.6"
indexmap = "1.9.2"
libc = "0.2"
mozjpeg-sys = "1.0.0"
napi = { version = "2.16.4", features = ["async", "napi4", "napi5", "serde-json"] }
once_cell = { version = "1.19.0" }
oxipng = "8.0.0"
rayon = "1.7.0"

# Crash reporting dependencies

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["custom"], default-features = false }
napi = { version = "2.16.4", features = ["serde-json"] }

[target.'cfg(all(target_os = "macos", not(feature = "canary")))'.dependencies]
# jemallocator is disabled on canary builds to experiment with its performance
# and reliability
jemallocator = { version = "0.3.2", features = ["disable_initial_exec_tls"] }

[target.'cfg(windows)'.dependencies]
mimalloc = { version = "0.1.25", default-features = false }

[build-dependencies]
napi-build = "2.1.3"
