[package]
name = "parcel"
version = "0.1.0"
edition = "2021"
description = "Parcel Bundler"

[lib]
path = "./src/lib.rs"

[dependencies]
parcel_config = { path = "../parcel_config" }
parcel_core = { path = "../parcel_core" }
parcel_filesystem = { path = "../parcel_filesystem" }
parcel_package_manager = { path = "../parcel_package_manager" }
parcel_plugin_resolver = { path = "../parcel_plugin_resolver" }
parcel_plugin_transformer_js = { path = "../parcel_plugin_transformer_js" }
parcel_plugin_rpc = { path = "../parcel_plugin_rpc" }

anyhow = "1.0.82"
