[package]
name = "parcel"
version = "0.1.0"
edition = "2021"
description = "Parcel Bundler"

[features]
nodejs = ["parcel_plugin_rpc/nodejs"]

[dependencies]
parcel_config = { path = "../parcel_config" }
parcel_core = { path = "../parcel_core" }
parcel_filesystem = { path = "../parcel_filesystem" }
parcel_package_manager = { path = "../parcel_package_manager" }
parcel_plugin_resolver = { path = "../parcel_plugin_resolver" }
parcel_plugin_transformer_js = { path = "../parcel_plugin_transformer_js" }
parcel_plugin_rpc = { path = "../parcel_plugin_rpc" }
parcel-resolver = { path = "../../packages/utils/node-resolver-rs" }

anyhow = "1.0.82"
dyn-hash = "0.x"
petgraph = "0.x"
serde = { version = "1.0.200", features = ["derive"] }
serde-bool = "0.1.3"
serde_json = "1.0.116"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
num_cpus = "1.16.0"
