[package]
name = "parcel_core"
version = "0.1.0"
edition = "2021"
description = "Core logic and types for the parcel bundler"

[features]
default = []

[dependencies]
parcel-resolver = { path = "../../packages/utils/node-resolver-rs" }
parcel_filesystem = { path = "../parcel_filesystem" }

ahash = "0.8.11"
anyhow = "1.0.82"
browserslist-rs = "0.15.0"
dyn-hash = "0.x"
nodejs-semver = "4.0.0"
petgraph = "0.x"
serde = { version = "1.0.200", features = ["derive"] }
serde-value = "0.7.0"
serde_json = { version = "1.0.116", features = ["preserve_order"] }
serde_repr = "0.1.19"
