[package]
name = "parcel_core"
version = "0.1.0"
edition = "2021"
description = "Core logic and types for the parcel bundler"

[features]
default = []

[dependencies]
parcel_filesystem = { path = "../parcel_filesystem" }
parcel-resolver = { path = "../../packages/utils/node-resolver-rs" }

anyhow = "1.0.82"
browserslist-rs = "0.15.0"
dyn-hash = "0.x"
nodejs-semver = "4.0.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["preserve_order"] }
serde_repr = "0.1.19"
serde-value = "0.7.0"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
