[package]
name = "parcel_core"
version = "0.1.0"
edition = "2021"
description = "Core logic and types for the parcel bundler"

[features]
default = []

[dependencies]
parcel_filesystem = { path = "../parcel_filesystem" }

anyhow = "1.0.82"
bitflags = "2.5.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
browserslist-rs = "0.15.0"
derive_builder = "0.20.0"
dyn-hash = "0.x"
mockall = "0.12.1"
nodejs-semver = "4.0.0"
serde = { version = "1.0.200", features = ["derive", "rc"] }
serde-value = "0.7.0"
serde_json = { version = "1.0.116", features = ["preserve_order"] }
serde_repr = "0.1.19"
xxhash-rust = { version = "0.8.2", features = ["xxh3"] }
