[package]
name = "parcel_filesystem"
version = "0.1.0"
edition = "2021"
description = "FileSystem wrapper trait for use in Parcel codebase."

[dependencies]
dashmap = "5.5.3"
mockall = "0.12.1"
gxhash = "3.4.1"
anyhow = "1.0.86"

[dev-dependencies]
assert_fs = "1.1.1"

[target.'cfg(windows)'.dev-dependencies]
is_elevated = "0.1.2"
