[package]
name = "parcel_monitoring"
description = "Provides tracing, error and crash reporting system for parcel"
version = "0.1.0"
edition = "2021"

[features]
canary = ["sentry", "whoami", "rustls", "minidumper", "crash-handler"]

rustls = ["sentry/rustls"]
openssl = ["sentry/native-tls"]

[[example]]
name = "sample_usage"
required-features = ["canary"]

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

whoami = { version = "1.5.1", optional = true }
sentry = { version = "0.32.2", optional = true, default-features = false, features = ["anyhow", "backtrace", "contexts", "debug-images", "panic", "reqwest"] }
crash-handler = { version = "0.6.2", optional = true }
minidumper = { version = "0.8.3", optional = true }

[dev-dependencies]
cfg-if = "1.0.0"
