[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "parcel-nodejs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
canary = ["sentry", "once_cell", "whoami", "rustls"]

rustls = ["sentry/rustls"]
openssl = ["sentry/native-tls"]

[dependencies]
parcel = { path = "../parcel" }
parcel-dev-dep-resolver = { path = "../../packages/utils/dev-dep-resolver" }
parcel-js-swc-core = { path = "../../packages/transformers/js/core" }
parcel-macros = { path = "../macros", features = ["napi"] }
parcel-resolver = { path = "../../packages/utils/node-resolver-rs" }
parcel-crypto = { path = "../parcel_crypto", features = ["napi"] }

anyhow = "1.0.82"
dashmap = "5.4.0"
libc = "0.2"
mozjpeg-sys = "1.0.0"
napi = { version = "2", features = ["serde-json","napi4", "napi5", "async"] }
napi-derive = "2"
once_cell = { version = "1.19.0", optional = true }
oxipng = "8.0.0"
rayon = "1.7.0"
sentry = { version = "0.32.2", optional = true, default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "debug-images", "anyhow"] }
serde = "1.0.198"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
whoami = { version = "1.5.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
jemallocator = { version = "0.3.2", features = ["disable_initial_exec_tls"] }

[target.'cfg(windows)'.dependencies]
mimalloc = { version = "0.1.25", default-features = false }

[build-dependencies]
napi-build = "2"
