[package]
authors = ["Monica Olejniczak <monica.j.olejniczak@gmail.com>"]
name = "parcel_package_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
mockall = "0.12.1"
thiserror = "1.0.59"
parcel_plugin_resolver = { path = "../parcel_plugin_resolver" }
parcel_filesystem = { path = "../parcel_filesystem" }
parcel_core = { path = "../parcel_core" }
anyhow = "1.0.82"
