[package]
name = "parcel_plugin_rpc"
version = "0.1.0"
edition = "2021"
description = "Parcel Bundler"

[features]
nodejs = ["dep:napi", "dep:serde"]

[dependencies]
parcel_config = { path = "../parcel_config" }
parcel_core = { path = "../parcel_core" }

anyhow = "1.0.82"
napi = { version = "2.16.4", features = ["serde"], optional = true }
serde = { version = "1.0.198", optional = true }
