[package]
name = "parcel_plugin_transformer_js"
version = "0.1.0"
edition = "2021"
description = "JavaScript Transformer Plugin for the Parcel Bundler"

[dependencies]
parcel_core = { path = "../parcel_core" }
anyhow = "1"
parcel-js-swc-core = { path = "../../packages/transformers/js/core" }
swc_core = { version = "0.95", features = ["ecma_ast"] }
indexmap = "2.2.6"

[dev-dependencies]
parcel_filesystem = { path = "../parcel_filesystem" }
