[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "parcel-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
parcel-js-swc-core = { path = "../../packages/transformers/js/core" }
parcel-resolver = { path = "../../packages/utils/node-resolver-rs" }
parcel-crypto = { path = "../parcel_crypto", features = ["napi"] }

dashmap = "5.4.0"
getrandom = { version = "0.2", features = ["custom"], default-features = false }
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
