[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "parcel-wasm"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
parcel_plugin_resolver = { path = "../parcel_plugin_resolver", features = ["wasm"] }
parcel-crypto = { path = "../parcel_crypto", features = ["wasm"] }
parcel-js-swc-core = { path = "../../packages/transformers/js/core" }

getrandom = { version = "0.2", features = ["custom"], default-features = false }
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"
