[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "parcel-fs-search"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { git = "https://github.com/napi-rs/napi-rs" }
napi-derive = { git = "https://github.com/napi-rs/napi-rs" }

[build-dependencies]
napi-build = { git = "https://github.com/napi-rs/napi-rs" }

[profile.release]
lto = true
opt-level = 3
