[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "parcel-fs-search"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { git = "https://github.com/napi-rs/napi-rs", branch = "main" }
napi-derive = { git = "https://github.com/napi-rs/napi-rs", branch = "main" }

[build-dependencies]
napi-build = { git = "https://github.com/napi-rs/napi-rs", branch = "main" }
