[package]
authors = ["Devon Govett <devongovett@gmail.com>"]
name = "parcel-js-swc"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { git = "https://github.com/napi-rs/napi-rs" }
napi-derive = { git = "https://github.com/napi-rs/napi-rs" }
swc_ecmascript = { version = "0.14.5", features = ["parser", "transforms", "utils", "visit", "codegen", "utils"] }
swc_common = "0.10.6"
swc_atoms = "*"

[build-dependencies]
napi-build = { git = "https://github.com/napi-rs/napi-rs" }
